<resources>
    <string name="hello_blank_fragment">TODO</string>
    <string name="app_name">ChatApp</string>

    <string name="hint_first">First</string>
    <string name="hint_last">Last</string>
    <string name="hint_fullname">Fullname</string>
    <string name="hint_nickname">Nickname</string>
    <string name="hint_email">Email</string>
    <string name="hint_old_password">Old Password</string>
    <string name="hint_new_password">New Password</string>
    <string name="hint_password">Password</string>
    <string name="hint_password_again">Retype Password</string>
    <string name="hint_username">Username</string>
    <string name="hint_verify_email">Verification Number</string>
    <string name="hint_chat_enter_text">Text Message</string>
    <string name="hint_weather_location">Location</string>
    <string name="hint_weather_location_focused">e.g. "47.288","-122.59" or "98402"</string>
    <string name="hint_connections_email">Email</string>


    <string name="button_register">Register</string>
    <string name="button_forgot_password_reset">Reset</string>
    <string name="button_forgot_password_email">Send Email</string>
    <string name="button_verify_email">Done</string>
    <string name="button_changepass_submit">Submit</string>


    <string name="action_login">Login</string>
    <string name="action_register">Register</string>
    <string name="switch_sign_in">Autologin</string>
    <string name="action_scroll_to_bottom">Scroll to Bottom</string>
    <string name="action_scroll_to_bottom_new">(New) Scroll to Bottom</string>
    <string name="action_connections_Add">Add</string>
    <string name="action_connections_cancel">Cancel</string>

    <string name="title_chatlist_create_new">Create New Chat</string>
    <string name="button_chatlist_create_pos">Create</string>
    <string name="button_chatlist_create_neg">Cancel</string>

    <string name="alert_title_login_unverified_email">Unverified Email</string>
    <string name="alert_message_login_unverified">It appears your email is in our system but hasn\'t been verified. Would you like us to send another verification email?</string>
    <string name="alert_action_login_positive">Cancel</string>
    <string name="alert_action_login_negative">Resend</string>

    <string name="alert_title_delete_chatroom">Delete Chat Room?</string>
    <string name="alert_title_delete_connection">Delete Connection?</string>
    <string name="alert_action_yes">Yes</string>
    <string name="alert_action_no">No</string>

    <string name="menu_home">Home</string>
    <string name="menu_weather">Weather</string>
    <string name="menu_connections">Contacts</string>
    <string name="menu_chat">Chat</string>
    <string name="title_chat_room">Chat Room</string>

    <string name="tab_home_messages">Messages</string>
    <string name="home_no_notification">None</string>
    <string name="textview_home_requested">Requested to connect</string>
    <string name="tab_home_requests">Requests</string>
    <string name="tab_weather_today">Today</string>
    <string name="tab_weather_24hr">24 Hour</string>
    <string name="tab_weather_10day">10 Day</string>

    <string name="button_purple_theme">Purple (default)</string>
    <string name="button_light_theme">Light (WIP)</string>
    <string name="button_dark_theme">Dark (WIP)</string>
    <string name="title_theme">Theme</string>
    <string name="text_theme_req_restart">(Requires App Restart)</string>

    <string name="textview_home_whatsnew">Whats New</string>
    <string name="textview_weather_conditions">Conditions</string>
    <string name="textview_24hour_card_time">Time</string>
    <string name="textview_10day_card_day">Day</string>

    <string name="textview_connections_email">Email/Username/First or Last Name</string>
    <string name="textview_connections_request">Request Connection</string>
    <string name="textview_chatlist_add_chatroom">Name</string>
    <string name="textview_locations_card_city">City</string>
    <string name="textview_locations_card_zipcode">Zipcode</string>
    <string name="textview_login_forgot">Forgot Password?</string>

    <string name="action_settings">Settings</string>
    <string name="action_logout">Log out</string>
    <string name="action_change_password">Change Password</string>

    <string name="snackbar_register_password_requirements">8+ characters w/ 1 uppercase, 1 lowercase, 1 number, and 1 special character.</string>
    <string name="alert_login_forgot_password_message">Please enter email connected to the account.</string>

    <string name="display_header_verify_email_title">Please verify your email!</string>
    <string name="display_header_forgot_password_reset">Reset Password</string>
    <string name="display_subheader_verify_email">We have sent you and email to verify you the Chatapp service.</string>
    <string name="display_subheader_forgot_password">To reset password please enter and email then click \'Send Email\', verify that you received email and return to this page.</string>
    <string name="test_name">Test Name</string>

    <string name="establishing_connection">Establishing Connection...</string>
    <string name="logging_in">Logging In...</string>

    <string name="weathercode_clear">Clear</string>
    <string name="weathercode_partly_clear">Partly clear</string>
    <string name="weathercode_partly_cloudy">Partly cloudy</string>
    <string name="weathercode_overcast">Overcast</string>
    <string name="weathercode_fog">Fog</string>
    <string name="weathercode_rime_fog">Rime fog</string>
    <string name="weathercode_drizzle_light">Drizzle low</string>
    <string name="weathercode_drizzle_med">Drizzle med</string>
    <string name="weathercode_drizzle_high">Drizzle high</string>
    <string name="weathercode_freezing_drizzle_light">Freezing drizzle</string>
    <string name="weathercode_freezing_drizzle_high">Freezing drizzle</string>
    <string name="weathercode_rain_light">Light rain</string>
    <string name="weathercode_rain_moderate">Moderate rain</string>
    <string name="weathercode_rain_heavy">Heavy rain</string>
    <string name="weathercode_freezing_rain_light">Freezing rain</string>
    <string name="weathercode_freezing_rain_heavy">Freezing rain</string>
    <string name="weathercode_light_snow">Light snow</string>
    <string name="weathercode_moderate_snow">Moderate snow</string>
    <string name="weathercode_heavy_snow">Heavy snow</string>
    <string name="weathercode_snow_grains">Snow grains</string>
    <string name="weathercode_rain_showers_light">Light showers</string>
    <string name="weathercode_rain_showers_moderate">Moderate showers</string>
    <string name="weathercode_rain_showers_heavy">Heavy showers</string>
    <string name="weathercode_snow_showers_light">Snow showers</string>
    <string name="weathercode_snow_showers_heavy">Snow showers</string>
    <string name="weathercode_storm">Thunderstorm</string>
    <string name="weathercode_storm_hail">Slight Hailstorm</string>
    <string name="weathercode_storm_hail_heavy">Heavy Hailstorm</string>

    <string name="alert_chatroom_you_got_kicked">You have been kicked from this chat.</string>
    <string name="alert_chatroom_you_got_kicked_pos">Leave</string>

    <string name="alert_msg_chatroom_kick_someone">The user must be re-added.</string>
    <string name="alert_title_chatroom_kick_someone_1">Kick </string>
    <string name="alert_title_chatroom_kick_someone_2"> from the chat room?</string>

    <string name="title_chatroom_add_user_via_contacts">User From Contacts</string>
    <string name="alert_title_chatroom_failed_leaving">Failed leaving server.</string>
    <string name="alert_msg_chatroom_failed_leaving">Please contact support. ¯\_(ツ)_/¯</string>
    <string name="alert_pos_chatroom_failed_leaving">Dismiss</string>
    <string name="alert_title_chatroom_failed_adding_user">Failed adding user.</string>
    <string name="alert_msg_chatroom_failed_adding_user">Please check if the user is already added.</string>
    <string name="alert_pos_chatroom_failed_adding_user">Dismiss</string>
    <string name="alert_title_chatroom_failed_renaming">Unable to rename chat.</string>
    <string name="alert_msg_chatroom_failed_renaming">Please contact support. ¯\_(ツ)_/¯</string>
    <string name="alert_pos_chatroom_failed_renaming">Dismiss</string>

    <string name="alert_title_chatroom_do_renaming">Rename this chat room:</string>
    <string name="alert_et_hint_chatroom_do_renaming">Name</string>
    <string name="alert_pos_chatroom_do_renaming">Rename</string>
    <string name="alert_neg_chatroom_do_renaming">Cancel</string>
    <string name="alert_title_chatroom_do_leave">Leave this chat room?</string>
    <string name="alert_msg_chatroom_do_leave">You will need to be added back by someone else.</string>
    <string name="alert_pos_chatroom_do_leave">Leave</string>
    <string name="alert_neg_chatroom_do_leave">Cancel</string>

    <string name="snackbar_chatroom_reached_top">Reached Top</string>

    <!-- Shared Prefs -->
    <string name="keys_shared_prefs">My Auth App Shared Prefs</string>
    <string name="keys_prefs_email">SharedPrefs: Email</string>
    <string name="keys_prefs_jwt">SharedPrefs: JWT</string>
    <string name="keys_prefs_memberid">SharedPrefs: MemberID</string>
    <string name="keys_prefs_username">SharedPrefs: Username</string>
    <string name="keys_prefs_username_prev">SharedPrefs: Username Prev</string>

    <!-- URL -->
    <string name="url_webservices">https://daveed-tcss450-labs.herokuapp.com/</string> <!-- Heroku -->
    <!--<string name="url_webservices">http://192.168.86.56:5000/</string>-->
    <!--        <string name="url_webservices">http://192.168.1.2:5000/</string> &lt;!&ndash; David &ndash;&gt;-->

</resources>
