<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.auth.register.RegisterFragment">

    <EditText
        android:id="@+id/edit_password_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:padding="15dp"
        android:ems="10"
        android:hint="@string/hint_password_again"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:background="#30ffffff"
        android:drawableStart="@drawable/baseline_password_24"
        android:drawablePadding="10dp"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_password_1" />

    <EditText
        android:id="@+id/edit_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:padding="15dp"
        android:ems="10"
        android:hint="@string/hint_username"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:background="#30ffffff"
        android:drawableStart="@drawable/baseline_person_24"
        android:drawablePadding="10dp"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/edit_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edit_last"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:padding="15dp"
        android:ems="10"
        android:hint="@string/hint_last"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:background="#30ffffff"
        android:drawableStart="@drawable/baseline_drive_file_rename_outline_24"
        android:drawablePadding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/edit_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edit_first"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:padding="15dp"
        android:ems="10"
        android:hint="@string/hint_first"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:background="#30ffffff"
        android:drawableStart="@drawable/baseline_drive_file_rename_outline_24"
        android:drawablePadding="10dp"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/edit_last"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:padding="15dp"
        android:ems="10"
        android:hint="@string/hint_email"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:background="#30ffffff"
        android:drawableStart="@drawable/baseline_email_24"
        android:drawablePadding="10dp"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/edit_password_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edit_password_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:padding="15dp"
        android:ems="10"
        android:hint="@string/hint_password"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:background="#30ffffff"
        android:drawableStart="@drawable/baseline_password_24"
        android:drawablePadding="10dp"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/edit_password_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:padding="15dp"
        android:text="@string/button_register"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_password_2" />
</androidx.constraintlayout.widget.ConstraintLayout>