<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.register.VerifyEmailFragment">

    <EditText
        android:id="@+id/edit_verification_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="280dp"
        android:layout_marginEnd="100dp"
        android:ems="10"
        android:hint="@string/hint_verify_email"
        android:inputType="numberPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_verify_email"
        android:layout_width="205dp"
        android:layout_height="52dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="100dp"
        android:text="@string/button_verify_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_verification_number" />

    <EditText
        android:id="@+id/edit_verify_emailtext"
        android:layout_width="185dp"
        android:layout_height="48dp"
        android:layout_marginStart="114dp"
        android:layout_marginTop="123dp"
        android:layout_marginEnd="114dp"
        android:editable="false"
        android:ems="10"
        android:inputType="text"
        android:text="@string/display_header_verify_email_title"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>